# analytics_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  Technical Documentation - Detailed.md  Technical Documentation - Diagram.md  Technical Documentation Detailed.md  UI Specs.md  agent.py  app.py  database_schema.py  db_agent_v1.drawio  db_agent_v1.ipynb  db_agent_v1.py  db_agent_v1_testing.ipynb  db_agent_v1_testing.py  db_agent_v2.ipynb  db_agent_v2.py  deployment_serving_endpoint.ipynb  genie_api.ipynb  initialization.py  pyproject.toml  query_endpoint.ipynb  query_graph.ipynb  requirements.txt  semantic_model.yaml  streamlit_demo.py  streamlit_demo_v2.py  test_isolation.ipynb  utilities.py
.do/: app.yaml
archive/: action_plan_business_glossaries_27_11_2025.md  app_databricks.py  databricks_mlflow_wrapper.py  employee_hierarchy_m_query.txt  implementation_requirements_change_response_format.md  implementation_requirements_clean_unused_parts.md  metadata_parsing.py
deployment/: deployment_to_databricks_mlflow.ipynb
initialize_demo_database/: a_create_tables.sql  b_create_date.py  c_create_advisors.py  d_create_household.py  demo_database_util.py  e_create_business_line.py  f_create_account.py  g_create_product.py  h_create_tier_fee.py  i_create_advisor_payout_rate.py  j_create_fact_account_initial_assets.py  k_create_fact_account_monthly.py  l_create_fact_account_product_monthly.py  load_all_tables.ipynb  m_create_fact_household_monthly.py  n_create_fact_revenue_monthly.py  p_create_fact_customer_feedback.py
notebooks/: dev.ipynb  evals.ipynb  (+1 more)
(+54 files in other folders)
