[build-system]
requires = ["setuptools>=68","wheel","build"]
build-backend = "setuptools.build_meta"

[project]
name = "database_copilot"
version = "1.0.0"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}